# logs-collector

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README-ru.md  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
logs_collector/: gunicorn.conf.py  manage.py  schema.yml
logs_collector/account/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
logs_collector/account/migrations/: 0001_initial.py
logs_collector/account/tests/: test_urls.py
logs_collector/apps/account/: apps.py  urls.py
logs_collector/apps/collector/: apps.py  models.py  views.py
logs_collector/collector/: __init__.py  admin.py  apps.py  context_processors.py  filters.py  forms.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
logs_collector/collector/api/: filters.py  permissions.py  serializers.py  urls.py  utils.py  views.py
logs_collector/collector/migrations/: 0001_initial.py  0002_alter_archive_file.py  0002_alter_ticket_options_alter_archive_size_and_more.py  0003_alter_archive_ticket.py  0004_rename_sha1_archive_md5_remove_archive_size.py  0005_token_archive_token.py  0006_remove_archive_token_remove_archive_user_and_more.py  0007_rename_upload_ticket_attempts.py  0008_alter_ticket_attempts_alter_ticket_token.py
logs_collector/collector/templatetags/: collector_extras.py
logs_collector/logs_collector/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
logs_collector/templates/: 403_csrf.html  404.html  405.html  500.html  base.html  errors.html
scripts/: entrypoint.sh  uploader.sh
(+65 files in other folders)
